View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030341 | Open CASCADE | OCCT:Data Exchange | public | 2018-11-06 11:27 | 2021-08-31 14:18 |
Reporter | snn | Assigned To | nds | ||
Priority | normal | Severity | minor | ||
Status | assigned | Resolution | open | ||
Product Version | 7.4.0 | ||||
Target Version | Unscheduled | ||||
Summary | 0030341: Data Exchange - XCAFDoc_GraphNode doesn't copy children upon pasting | ||||
Description | XCAFDoc_GraphNode::Paste sets parents instead of children to the target attribute in the children copying loop | ||||
Steps To Reproduce | Branch CR30341 is ready to be reviewed | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR30341 has been created by snn. SHA-1: 498fc86d8e0012a3c41b56b13b25d394468a1e21 Detailed log of new commits: Author: snn Date: Tue Nov 6 11:32:32 2018 +0300 0030341: XCAFDoc_GraphNode doesn't copy children upon pasting |
|
Branch CR30341 has been updated by snn. SHA-1: 014eaedd3047781050e53f0c3a0ee590649c0971 Detailed log of new commits: Author: snn Date: Tue Nov 6 16:19:46 2018 +0300 0030341: Unset child/parent links bugs fix |
|
The provided code correction presents in fix for '0029716: Some TDF and XCAFDoc labels-related issues' that is already on master. To be checked in the custom application after porting on the current master. |
|
Natalia, can we consider the fix as verified? |
|
Dear Andrey, it is waiting for a DRAW test case. Best regards, Natalia |
|
Sorry, Andrey another issue is waiting for the draw test case. Fix for this issue is already in master (done within the related issue). Could you please close it. Thank you in advance, Natalia |
|
We need to have a test case to avoid possible regressions. If not possible to put it in 7.4.0, please switch the issue to 7.5.0 |
|
This DRAW test case will be created with implementing a test case for 30392. |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-11-06 11:27 | snn | New Issue | |
2018-11-06 11:27 | snn | Assigned To | => gka |
2018-11-06 11:34 | git | Note Added: 0080736 | |
2018-11-06 12:09 | gka | Status | new => resolved |
2018-11-06 12:09 | gka | Steps to Reproduce Updated | |
2018-11-07 14:06 | git | Note Added: 0080826 | |
2019-04-30 15:30 | nds | Relationship added | related to 0029716 |
2019-04-30 15:34 | nds | Note Added: 0084081 | |
2019-09-04 18:28 | kgv | Product Version | => 7.4.0 |
2019-09-04 18:28 | kgv | Summary | XCAFDoc_GraphNode doesn't copy children upon pasting => Data Exchange - XCAFDoc_GraphNode doesn't copy children upon pasting |
2019-09-06 10:25 | gka | Assigned To | gka => abv |
2019-09-06 10:25 | gka | Status | resolved => feedback |
2019-09-14 14:49 | abv | Assigned To | abv => nds |
2019-09-14 14:49 | abv | Note Added: 0087086 | |
2019-09-16 08:48 | nds | Note Added: 0087109 | |
2019-09-17 09:39 | nds | Note Added: 0087185 | |
2019-09-17 09:39 | nds | Assigned To | nds => abv |
2019-09-17 09:39 | nds | Status | feedback => reviewed |
2019-09-20 12:25 | abv | Note Added: 0087354 | |
2019-09-20 12:25 | abv | Assigned To | abv => nds |
2019-09-20 12:25 | abv | Status | reviewed => assigned |
2019-09-20 13:18 | nds | Relationship added | related to 0030392 |
2019-09-20 13:21 | nds | Note Added: 0087359 | |
2019-09-20 13:21 | nds | Target Version | 7.4.0 => 7.5.0 |
2020-09-17 20:12 | gka | Target Version | 7.5.0 => 7.6.0 |
2021-08-31 14:18 | gka | Target Version | 7.6.0 => Unscheduled |