0030341: XCAFDoc_GraphNode doesn't copy children upon pasting